--- a/transition-guide/sections/temporary_global_services.adoc
+++ b/transition-guide/sections/temporary_global_services.adoc
@@ -43,7 +43,7 @@ The WIS2 implementation plan outlines a gradual transition of data exchange from
 
 When a National Meteorological Centre (NMC), running a Message Switching System and exchanging data on the GTS, has implemented WIS2, it may wish to stop sending its data directly on the GTS so that it can stop the MSS.
 
-For a Member that wishes to stop its MSS, the WIS2 to GTS gateway will ensure that only data currently available on the GTS will be re-published on the GTS, so that no data is lost during the transition.
+For a Member that wishes to stop MSS, the WIS2 to GTS gateway will ensure that only data currently available on the GTS will be re-published on the GTS, so that no data is lost during the transition.
 
 To ensure resilient operation, there will be more than one WIS2 to GTS gateway.
 
@@ -91,7 +91,7 @@ During the transition period, other gateways will republish GTS data to WIS2. Th
 
 Thanks to the gateway functions previously described, WIS centres that currently use the GTS to exchange operational data and that have successfully implemented a WIS2 Node with the additional features required for the gateways to provide the gateway service, will be able to stop their MSS, if they wish to do so, before the end of the complete migration. Gradually stopping of the whole MSS shall be done in an orderly and coordinated manner so that all data required by Members for their operations will continue to be available.
 
-Section 6 of the present guide describes the various roles of the GTS (NMC, RTH, World Meteorological Centres (WMC)). It also details when a centre can stop its MSS. When all the conditions for a centre are met, the decommissioning procedure in Figure 2 can be applied.
+Section 6 of the present guide describes the various roles of GTS (NMC, RTH, World Meteorological Centres (WMC)). It also details when a centre can stop its MSS. When all the conditions for a centre are met, the decommissioning procedure in Figure 2 can be applied.
 
 .MSS decommissioning procedure
 image::images/stopping-mss.png[Figure 2. MSS decommissioning procedure]
